crates/test-gosub_svg.txt
   Compiling gosub_svg v0.1.0 (/home/jthijssen/code/gosub/engine/crates/gosub_svg)
error[E0432]: unresolved import `resvg`
 --> crates/gosub_svg/src/lib.rs:1:7
  |
1 | use ::resvg::usvg;
  |       ^^^^^ could not find `resvg` in the list of imported crates

For more information about this error, try `rustc --explain E0432`.
error: could not compile `gosub_svg` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `gosub_svg` (lib test) due to 1 previous error
